# CompSerList

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/cpp/: compressionCalc.cpp  process.cpp
src/lib/hpp/: compressionCalc.h  process.h
test/: CMakeLists.txt  TestChunks.h  test_rle_Compress.cpp
